--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3'
+
 services:
   appointment:
     image: node
@@ -6,10 +8,7 @@ services:
     working_dir: /app/sharedine-appointment/
     ports:
       - "3002:3002"
-    command: > 
-      bash -c
-      "npm install
-      && npm run start"
+    command: npm install && npm run start
 
   user:
     image: node
@@ -18,11 +17,8 @@ services:
     working_dir: /app/sharedine-user/
     ports:
       - "3001:3001"
-    command: > 
-      bash -c
-      "npm install
-      && npm run start"
-      
+    command: npm install && npm run start
+
   friends:
     image: node
     volumes:
@@ -30,10 +26,7 @@ services:
     working_dir: /app/sharedine-friends/
     ports:
       - "3003:3003"
-    command: > 
-      bash -c
-      "npm install
-      && npm run start"
+    command: npm install && npm run start
 
   chat:
     image: node
@@ -42,10 +35,7 @@ services:
     working_dir: /app/sharedine-chat/
     ports:
       - "3004:3004"
-    command: > 
-      bash -c
-      "npm install
-      && npm run start"
+    command: npm install && npm run start
 
   notifications:
     image: node
@@ -54,7 +44,4 @@ services:
     working_dir: /app/sharedine-notifications/
     ports:
       - "3005:3005"
-    command: > 
-      bash -c
-      "npm install
-      && npm run start"
+    command: npm install && npm run start
