--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "url": "https://github.com/TheoEversdijk/sharedine/issues"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.7",
     "bootstrap": "^5.2.3",
     "dropzone": "^6.0.0-beta.2",
     "font-awesome": "^4.7.0",
+    "jest": "^29.7.0",
     "react": "^18.2.0"
   }
 }
